# avalon-bonsai

./: .gitignore  README.md  flake.nix  package-defs.json
.github/workflows/: nix.yml
firebase/: dune  firebase.ml  firebase.mli
firebase/shim/: README.md  build.sh  entry.mjs  package-lock.json  package.json
src/: achievements.ml  achievements.mli  actions.mli  api.ml  api.mli  dune  ffi.ml  ffi.mli  game_board.ml  lobby.ml  lobby.mli  login.ml  missions.ml  missions.mli  modals.ml  parse.ml  parse.mli  player_list.ml  player_list.mli  role_list.mli  state.ml  state.mli  stats.mli  style.ml  style.mli  summary_table.ml  toast.ml  toast.mli  toolbar.ml  toolbar.mli  types.ml  view.ml
src/components/: achievements.ml  actions.ml  actions.mli  dune  game_board.ml  game_board.mli  lobby.ml  login.ml  login.mli  missions.ml  modals.ml  modals.mli  player_list.ml  player_list.mli  role_list.ml  role_list.mli  stats.ml  summary_table.ml  summary_table.mli  toolbar.ml  ui.ml  ui.mli  view.ml  view.mli
src/core/: analysis.ml  analysis.mli  avalonlib.ml  avalonlib.mli  dune  game.ml  game.mli  types.ml  types.mli  util.ml  util.mli
test/: dune  fixtures.ml  fixtures.mli  test_analysis.ml  test_avalonlib.ml  test_avalonlib.mli  test_game.ml  test_util.ml
web/: firebase-shim.js  index.html  style.css
